<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="wrap_content"
            android:layout_height="40dp" />

        <TextView
            style="@style/main_btn_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/without_alco"
            android:textSize="36sp" />

        <Chronometer
            android:id="@+id/chronometer"
            style="@style/main_btn_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:countDown="false"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/vgButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDrink"
            style="@style/main_btn_text_style"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/buttonshape"
            android:text="@string/drink" />

        <View
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:enabled="true" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMiniDrink"
            style="@style/main_btn_text_style"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/buttonshape"
            android:text="@string/mini_drink" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnShowStatistics"
        style="@style/main_btn_text_style"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/statistics_shape"
        android:text="@string/statistics_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnHideStatistics"
        style="@style/main_btn_text_style"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/statistics_shape"
        android:text="@string/btn_hide_text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <FrameLayout
        android:id="@+id/layoutForFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="1dp" >

    </FrameLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="190dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>